SalesforceProject/mdapipkg/unpackaged/objects/Job_Posting_Site__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Posting_Site_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Posting Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Site</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Posting Site</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Posting Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>